# xldvp_seg

./: .gitignore  .pre-commit-config.yaml  404.html  AI_AGENT_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MASK_CLEANUP_FIX.md  Makefile  NORMALIZATION_IMPLEMENTATION.md  PIPELINE_WORKFLOW.md  README.md  SESSION_NOTES.md  TODO_AI_AGENT.md  TODO_IMPROVEMENTS.md  activate_env.sh  add_clear_buttons.py  add_normalization.patch  apply_normalization_changes.py  check_slide_intensities.py  compute_normalization_params.py  compute_reinhard_params_16slides_MEDIAN.py  compute_reinhard_params_8slides.py  compute_stain_consensus.py  convert_annotations_to_training.py  create_combined_index.py  debug_early_late_only.py  debug_islet_tile.py  debug_regress_slide.py  early_late_analysis.py  export_nmj_results_html.py  export_separate_mk_hspc.py  generate_combined_html.py  generate_html_from_features.py  index.html  input_files.txt  install.sh  maturation_analysis.py  (+41 more)
.claude/: settings.json
.claude/agents/: annotation-trainer.md  detection-dev.md  lmd-export.md  pipeline-runner.md
.claude/commands/: analyze.md  classify.md  czi-info.md  lmd-export.md  new-experiment.md  preview-preprocessing.md  spatialdata.md  status.md  vessel-analysis.md  view-results.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  test.yml
BLOCKFACE_REGISTRATION/: index.html
CLUSTER_DISCOVERY/: index.html
COORDINATE_SYSTEM/: index.html
GETTING_STARTED/: index.html
LMD_EXPORT_GUIDE/: index.html
MANIFOLD_SAMPLING/: index.html
NMJ_LMD_EXPORT_WORKFLOW/: index.html
NMJ_PIPELINE_GUIDE/: index.html
VESSEL_COMMUNITY_ANALYSIS/: index.html
VESSEL_LUMEN_THRESHOLD_PIPELINE/: index.html
api/cluster_features/: index.html
api/io/: index.html
api/marker_classification/: index.html
api/omic_linker/: index.html
api/region_clustering/: index.html
api/slide_analysis/: index.html
changelog/: index.html
checkpoints/: nmj_classifier_morph_sam2.joblib
classifiers/: registry.json
cli-reference/: index.html
configs/: msln.yaml  n45_liver.yaml  senescence.yaml  vessel_cd31_sma.yaml
contributing/: index.html
docs/: BLOCKFACE_REGISTRATION.md  CLUSTER_DISCOVERY.md  COORDINATE_SYSTEM.md  ENTRY_POINT_UNIFICATION.md  GETTING_STARTED.md  LMD_EXPORT_GUIDE.md  MANIFOLD_SAMPLING.md  MK_ANALYSIS_STATUS.md  NMJ_LMD_EXPORT_WORKFLOW.md  NMJ_PIPELINE_GUIDE.md  SESSION_HISTORY.md  VESSEL_COMMUNITY_ANALYSIS.md  VESSEL_LUMEN_THRESHOLD_PIPELINE.md  changelog.md  cli-reference.md  contributing.md  index.md  output-formats.md  tutorial.md
output-formats/: index.html
scripts/: add_sma_ring.py  aggregate_group_annotations.py  analyze_islets.py  annotate_bone_regions.py  apply_classifier.py  assign_cells_to_regions.py  assign_distance_bins.py  assign_tissue_zones.py  assign_vessel_wall_cells.py  build_manifold_replicates.py  build_ms_queue.py  calculate_tissue_areas.py  classify_markers.py  cluster_by_features.py  cluster_detections.py  cluster_nmjs.py  combined_region_viewer.py  compare_feature_sets.py  complete_psilo_dedup.py  contour_processing.py  convert_to_spatialdata.py  correct_photobleaching.py  count_nuclei_per_cell.py  czi_info.py  czi_to_ome_zarr.py  detect_curvilinear_patterns.py  detect_fibers_for_lmd.py  detect_regions_for_lmd.py  detect_vessel_lumens_threshold.py  detect_vessel_structures.py  discover_rare_cell_types.py  export_transcript.py  extract_lumen_features.py  extract_sam2_embeddings.py  extract_sam2_for_mk.py  extract_singles_contours.py  generate_cluster_gallery.py  generate_contour_viewer.py  generate_expr_spatial_viewer.py  generate_full_lmd_export.py  (+64 more)
search/: search_index.json
segmentation/: __init__.py  cli.py
shared/: __init__.py  html_export.py  tissue_detection.py
slurm/: compute_stain_consensus.sbatch  debug_islet.sh  generate_combined_html.sbatch  launch_parallel_8jobs.sh  launch_parallel_8jobs_normalized.sh  launch_pipeline.sh  regenerate_html.sbatch  regenerate_html_3gpu.sbatch  regenerate_html_sorted.sbatch  regenerate_nmj_html.sbatch  run_all16_normalized_singlejob.sh  run_analyze_islets.sh  run_batch_segmentation.sbatch  run_brain_fish_10pct.sbatch  run_brain_fish_full.sbatch  run_coronal_tp_10pct.sbatch  run_islet_analysis.sbatch  run_islet_full.sh  run_islet_multigpu.sh  run_islet_nuclei.sbatch  run_islet_pm_nuclei.sbatch  run_islet_roi_compare.sbatch  run_islet_test.sh  run_l40s_4gpu.sbatch  run_maturation_analysis.sbatch  run_mi300a_array_10pct.sbatch  run_mi300a_sequential_all16.sbatch  run_mi300a_sequential_resume.sbatch  run_multigpu.sbatch  run_multigpu_hpcl8.sbatch  run_nmj_detect_shard.sh  run_nmj_merge.sh  run_nmj_multigpu_100pct.sh  run_nmj_multigpu_10pct.sh  run_nmj_multigpu_15pct.sh  run_nmj_multinode_100pct.sh  run_nmj_multinode_100pct_noclass.sh  run_nmj_multinode_15pct.sh  run_psilo_annotation_html.sbatch  run_psilo_cluster.sbatch  (+35 more)
tests/: conftest.py  test_adaptive_rdp.py  test_aggregation.py  test_api.py  test_background.py  test_background_has_raw.py  test_base_classifier.py  test_cache_utils.py  test_channel_resolution.py  test_classification_load_errors.py  test_cli.py  test_cli_parsing.py  test_cluster_features.py  test_cluster_spatial_stats.py  test_coordinates.py  test_correct_all_channels.py  test_curvilinear.py  test_deduplication.py  test_detection_base.py  test_detection_utils_extended.py  test_discover_rare_cell_types_cli.py  test_exceptions.py  test_feature_extraction.py  test_flat_field_cache.py  test_generate_lumen_annotation.py  test_global_cluster_viewer_rare_mode.py  test_graph_topology.py  test_handoff_roundtrip.py  test_html_xss.py  test_integration_pipeline.py  test_json_utils.py  test_lmd_export.py  test_manifold_sampling.py  test_marker_classification.py  test_marker_classification_hypothesis.py  test_metrics.py  test_mk_hspc_imports.py  test_module_imports.py  test_ms_queue.py  test_ms_queue_cli.py  (+32 more)
training_data/: nmj_annotations_20250202_morph_sam2_training.json
tutorial/: index.html
xldvp_seg/: __init__.py  exceptions.py
(+370 files in other folders)
