[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkseg"
version = "2.0.0"
description = "Unified cell segmentation pipeline for microscopy images (MK, HSPC, NMJ, Vessel)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Cell Segmentation Team"}
]
keywords = ["segmentation", "microscopy", "cells", "deep-learning", "SAM2", "cellpose"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Core dependencies (PyTorch and SAM2 installed separately - see install.sh)
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scipy>=1.10",
    "scikit-learn>=1.0",
    "scikit-image>=0.21",
    "h5py>=3.8",
    "hdf5plugin>=4.0",
    "tqdm>=4.65",
    "pillow>=9.5",
    "aicspylibczi>=3.1",
    "matplotlib>=3.7",
    "psutil>=5.8",
    "joblib>=1.2",
    "cellpose>=3.0",
    # SpatialData / scverse ecosystem
    "spatialdata>=0.1",
    "anndata>=0.10",
    "scanpy>=1.9",
    "squidpy>=1.3",
    "geopandas>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
# Main entry points
mkseg = "run_segmentation:main"
mkseg-nmj = "run_segmentation:main"
mkseg-serve = "serve_html:main"

[project.urls]
"Homepage" = "https://github.com/peptiderodriguez/xldvp_seg"
"Bug Tracker" = "https://github.com/peptiderodriguez/xldvp_seg/issues"

[tool.setuptools]
py-modules = [
    "run_segmentation",
    "run_lmd_export",
    "serve_html",
    "train_classifier",
    "compute_normalization_params",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["segmentation*", "shared*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
"configs" = ["**/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
